WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147506
Crashes under HTMLMediaElement::updateActiveTextTrackCues() when destroying CachedPage.
https://bugs.webkit.org/show_bug.cgi?id=147506
Summary
Crashes under HTMLMediaElement::updateActiveTextTrackCues() when destroying C...
Andreas Kling
Reported
2015-07-31 14:17:24 PDT
<
rdar://problem/21939014
>
Attachments
Patch
(1.67 KB, patch)
2015-07-31 14:18 PDT
,
Andreas Kling
cdumez
: review+
Details
Formatted Diff
Diff
Patch for landing
(1.59 KB, patch)
2015-07-31 14:50 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2015-07-31 14:18:06 PDT
Created
attachment 257959
[details]
Patch
Pratik Solanki
Comment 2
2015-07-31 14:21:27 PDT
***
Bug 147505
has been marked as a duplicate of this bug. ***
Chris Dumez
Comment 3
2015-07-31 14:24:46 PDT
Comment on
attachment 257959
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=257959&action=review
> Source/WebCore/html/HTMLMediaElement.cpp:5542 > + if (!ActiveDOMObject::scriptExecutionContext() || ActiveDOMObject::scriptExecutionContext()->activeDOMObjectsAreStopped())
nit: Do we really need the "ActiveDOMObject::"?
> Source/WebCore/html/HTMLMediaElement.cpp:5543 > + return;
But now we're not doing the updateSleepDisabling() call anymore in this case, why is this OK?
Chris Dumez
Comment 4
2015-07-31 14:38:57 PDT
Comment on
attachment 257959
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=257959&action=review
r=me
>> Source/WebCore/html/HTMLMediaElement.cpp:5542 >> + if (!ActiveDOMObject::scriptExecutionContext() || ActiveDOMObject::scriptExecutionContext()->activeDOMObjectsAreStopped()) > > nit: Do we really need the "ActiveDOMObject::"?
let's use document().
>> Source/WebCore/html/HTMLMediaElement.cpp:5543 >> + return; > > But now we're not doing the updateSleepDisabling() call anymore in this case, why is this OK?
Sorry, I thought you were in clearMediaPlayer(), never mind my comment.
Andreas Kling
Comment 5
2015-07-31 14:50:55 PDT
Created
attachment 257962
[details]
Patch for landing
WebKit Commit Bot
Comment 6
2015-07-31 15:44:03 PDT
Comment on
attachment 257962
[details]
Patch for landing Clearing flags on attachment: 257962 Committed
r187687
: <
http://trac.webkit.org/changeset/187687
>
WebKit Commit Bot
Comment 7
2015-07-31 15:44:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug