Crashes under HTMLMediaElement::updateActiveTextTrackCues() when destroying CachedPage. <https://webkit.org/b/147506> <rdar://problem/21939014>

Reviewed by Chris Dumez.

Don't mess with the media element's text tracks below its ActiveDOMObject::stop()
implementation, since that may cause DOM mutations.

I don't have a repro or a test for this, but plenty of crash logs to indicate that
we're getting ourselves into trouble by modifying the DOM during CachedPage teardown.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::configureTextTrackDisplay):


Canonical link: https://commits.webkit.org/165583@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187687 268f45cc-cd09-0410-ab3c-d52691b4dbfc